--- a/transfer_learning.ipynb
+++ b/transfer_learning.ipynb
@@ -24,7 +24,7 @@
     "<h1>Transfer Learning Experiment with Indic Scripts</h1>\n",
     "<h2>Abdul Kawsar Tushar <br> Akm Ashiquzzaman<br>Afia Afrin </h2>\n",
     "\n",
-    "Spring 2017\n",
+    "Fall 2017\n",
     "\n",
     "<p> About transfer Learning: <br> \n",
     "\n",
