--- a/transfer_learning.ipynb
+++ b/transfer_learning.ipynb
@@ -66,7 +66,7 @@
     "1. Feature extraction Part.\n",
     "2. Classification Part.\n",
     "\n",
-    "We need to the weight os the former part to be freezed in backprop.  \n"
+    "We need the weight of the former part to be freezed in backprop.  \n"
    ]
   },
   {
