--- a/transfer_learning.ipynb
+++ b/transfer_learning.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "source": [
     "<h1>Transfer Learning Experiment with Indic Scripts</h1>\n",
-    "<h2>Abdul Kawsar Tushar <br> Akm Ashiquzzaman<br>Afia Afrin </h2>\n",
+    "<h2>Abdul Kawsar Tushar  </h2>\n",
     "\n",
     "Fall 2017\n",
     "\n",
